After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 606914 - feedback loop of some kind when changing the default device
feedback loop of some kind when changing the default device
Status: RESOLVED FIXED
Product: gnome-media
Classification: Deprecated
Component: gnome-volume-control
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gnome media maintainers
gnome media maintainers
Depends on:
Blocks:
 
 
Reported: 2010-01-14 01:21 UTC by Lennart Poettering
Modified: 2010-02-02 15:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Applet should not set volume on startup (1.50 KB, patch)
2010-02-02 15:21 UTC, Bastien Nocera
committed Details | Review

Description Lennart Poettering 2010-01-14 01:21:48 UTC
for some reason g-v-c-a seems to reset the volume (and clamp it to < 100%) when the default device changes. Seems to be some kind of feedback loop left over.

see http://www.pulseaudio.org/ticket/756#comment:4 for a way to reproduce this.

Also, as a side note g-v-c-a should show the same volume range that g-v-c shows, i.e. extended to 150%.
Comment 1 Bastien Nocera 2010-02-02 15:21:01 UTC
Created attachment 152839 [details] [review]
Applet should not set volume on startup

When the applet sets its initial value, if the value is different
from the default, we'd set the scale value. Which would then
feed back into the value-changed for the scale, and sometimes
clip the value.

We shouldn't touch the sound on startup, when setting the
scale's initial value.
Comment 2 Bastien Nocera 2010-02-02 15:22:29 UTC
Having the status icon use a wider scale would mean UI problems. Best
investigated as a separate issue.

Attachment 152839 [details] pushed as 5554b40 - Applet should not set volume on startup