Applet should not set volume on startup

When the applet sets its initial value, if the value is different
from the default, we'd set the scale value. Which would then
feed back into the value-changed for the scale, and sometimes
clip the value.

We shouldn't touch the sound on startup, when setting the
scale's initial value.

https://bugzilla.gnome.org/show_bug.cgi?id=606914